# ply

./: .Dockerignore  .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  package.json
.design/: design.pen
.husky/: pre-commit
.spec/v1_auth/: plan.md
.spec/v1_dashboard_tracks/: spec.md
api/: .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  compose.yml  dev.sh  pyproject.toml  pytest.ini  verify_jdmatch.py
api/app/: main.py
api/app/api/v1/: api.py
api/app/api/v1/dto/: __init__.py  jdmatch.py
api/app/api/v1/endpoints/: jdmatch.py
api/app/core/: config.py
api/app/core/logging/: logger.py  middleware.py
api/app/integrations/browser_use/: agent.py  client.py
api/app/integrations/db/: database.py  models.py
api/app/integrations/llm/: gemini.py
api/app/integrations/redis/: store.py
api/app/integrations/stagehand/: agent.py
api/app/integrations/supabase/: storage.py
api/app/integrations/upstash/: qstash.py
api/app/modules/jdmatch/: constants.py  repo.py  schemas.py  service.py
api/app/modules/jdmatch/agents/: analyze_jd_text_structure.py  extract_jd.py  generate_candidate_score.py
api/app/modules/jdmatch/utils/: cleanup_file.py  convert_doc_to_pdf_if_needed.py  doc_to_pdf.py  download_resume.py  extract_filename_from_response.py  init_file.py  init_file_identity.py  is_jd_link_or_description.py  save_file.py  transform_download_url.py
api/migrations/: env.py
api/migrations/versions/: 4162be973fde_pk_changes_for_jdmatch.py  4469ae1616af_initial_migration.py  7a05941e401b_description_of_changes.py  e57209174471_new_resume_url_field.py
api/tests/: conftest.py  test_jdmatch.py
client/: .lintstagedrc  package.json  vite.config.ts
client/.husky/: commit-msg
client/src/: App.vue  main.ts  style.css
client/src/components/: HelloWorld.spec.ts
client/src/components/atoms/: index.ts
client/src/components/atoms/Alert/: Alert.stories.ts  Alert.vue
client/src/components/atoms/Badge/: Badge.stories.ts  Badge.vue
client/src/components/atoms/Button/: Button.stories.ts  Button.vue  ButtonContent.vue  ButtonIcon.vue  ButtonLoading.vue  button.context.ts
client/src/components/atoms/Chip/: Chip.stories.ts  Chip.vue
client/src/components/atoms/Heading/: Heading.stories.ts  Heading.vue
client/src/components/atoms/Input/: Input.stories.ts  Input.vue
client/src/components/atoms/MatrixLoader/: MatrixLoader.stories.ts  MatrixLoader.vue
client/src/components/atoms/StatusIcon/: StatusIcon.stories.ts  StatusIcon.vue
client/src/components/atoms/Text/: Text.stories.ts  Text.vue
client/src/components/atoms/Textarea/: Textarea.stories.ts  Textarea.vue
client/src/components/molecules/: index.ts
client/src/components/molecules/Card/: Card.stories.ts  Card.vue  CardBody.vue  CardHeader.vue
client/src/components/molecules/Dropzone/: Dropzone.stories.ts  Dropzone.vue  DropzoneEmpty.vue  DropzoneFileList.vue  dropzone.context.ts
client/src/components/molecules/Modal/: Modal.vue  ModalBody.vue  ModalFooter.vue  ModalHeader.vue  modal.context.ts
client/src/components/molecules/ScoreRing/: ScoreRing.stories.ts  ScoreRing.vue
client/src/components/molecules/SkillItem/: SkillItem.stories.ts  SkillItem.vue
client/src/components/molecules/TabBar/: Tab.vue  TabBar.stories.ts  TabBar.vue  TabContent.vue
client/src/components/molecules/ToggleGroup/: ToggleGroup.stories.ts  ToggleGroup.vue  ToggleGroupItem.vue
client/src/components/organisms/: index.ts
client/src/components/organisms/Header/: AppHeader.stories.ts  AppHeader.vue
client/src/feature/jdmatch/: index.ts
client/src/feature/jdmatch/api/: client.ts  jdmatch.ts
client/src/feature/jdmatch/composables/: useAnalyzeJdMatch.ts  useCreateJdMatch.ts  useJdMatchPage.ts  useJdMatchReport.ts  useJdMatchWizard.ts  useJobDescription.ts  useResumeUpload.ts  useTextTruncate.ts
client/src/feature/jdmatch/pages/: JdMatchPage.stories.ts  JdMatchPage.vue  JdMatchReportPage.vue
client/src/feature/jdmatch/templates/: StepLayout.stories.ts  StepLayout.vue
client/src/feature/jdmatch/types/: api.ts  wizard.ts
client/src/router/: index.ts
components/App/: index.vue
components/FileInput/: index.vue
components/Loading/: index.vue
components/Result/: index.vue
components/Result/RatingCard/: index.vue
components/Result/SkillCard/: Loading.vue
components/Toast/: index.vue
components/context/DataProvider/: index.vue  types.ts
components/context/Sonner/: types.ts
composables/hooks/: useMutation.ts
design/: design.pen
server/api/v1/jdmatch/: consumer.post.ts
server/api/v1/jdmatch/score/: [fileId].get.ts
shared/ai/jd/: analyseIfTextStructureIsAJD.ts  extractJD.ts  findJDMatchInfo.ts  generateCandidateScore.ts  isJdLinkOrDescription.ts  parseJDInformation.ts
shared/context/Provider/: index.vue
shared/integrations/: redis.ts
shared/utils/: logging.ts
(+41 files in other folders)
